# pa-visualizer

./: .gitignore  Cargo.toml  HACKING.md  LICENSE-APACHE  LICENSE-MIT  README.md  visualizer.py
configs/: ascii.toml  debug.toml  noambition.toml  noambition2.toml  python.toml  sfml.toml  space.toml
framework/: Cargo.toml
framework/src/: lib.rs  playback.rs  recorder.rs  spectralizer.rs
src/: ascii.rs  debug.rs  python.rs  sfml-simple.rs  sfml-wirecircle.rs  sfml-wireline.rs
src/noambition/: main.rs
src/noambition/shaders/: background.frag  bokeh.frag  final.frag  fxaa.frag  gauss.frag  postprocess.vert  prepass.frag  prepass.vert
src/noambition2/: main.rs
src/noambition2/shaders/: background.frag  bokeh.frag  colorchange.frag  final.frag  gauss.frag  prepass.vert
src/space/: info.rs  macros.rs  main.rs
src/space/components/: drawable.rs  mod.rs  physics.rs  updateable.rs
src/space/entities/: billboard.rs  freq_drop.rs  fsd_flash.rs  mod.rs  planet.rs  rings.rs  ship.rs  ship_inbound.rs  ship_outbound.rs  station.rs
src/space/entities/shaders/: billboard.frag  billboard.vert  freq_drop.frag  freq_drop.vert  fsd_flash.frag  ring.frag  ring.vert  station.frag  station.vert
src/space/shaders/: background.frag  combine.frag  fxaa.frag  gauss.frag  gauss_weights.py
